--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,14 @@
-name:                mf-compile
-version:             0.1.0.0
-github:              "daniel-raffler/mf-compile"
-license:             OtherLicense
-author:              "Daniel Raffler"
-maintainer:          "daniel-raffler@gmx.de"
-copyright:           "2022 Daniel Raffler"
+name:       mf-compile
+version:    0.1.0.0
+github:     "daniel-raffler/mf-compile"
+license:    OtherLicense
+author:     "Daniel Raffler"
+maintainer: "daniel-raffler@gmx.de"
+copyright:  "2022 Daniel Raffler"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
+  - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,32 +17,23 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/daniel-raffler/mf-runtime#readme>
 
+description: Please see the README on GitHub at <https://github.com/daniel-raffler/mf-runtime#readme>
+  
 dependencies:
-- base >= 4.7 && < 5
-
-library:
-  source-dirs: src
+  - base >= 4.7 && < 5
+  - megaparsec
+  - text
+  - containers
+  - optparse-applicative
+  - filepath
+  - mf-library
 
 executables:
   mf-compile-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - mf-compile
-
-tests:
-  mf-compile-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - mf-compile
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
