--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,9 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
+extra-deps:
+  - git: https://github.com/daniel-raffler/mf-library.git
+    commit: f80d47339c85ed0c2c593805f5cd97f1ad9db4ed
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
